# Learning

./: .clang-format  .gitignore  README.md  a  del.clang_format-del
.githooks/: pre-commit
.github/workflows/: .first.yaml.swp  .fisrt.yaml.swp  artifact.yaml  first.yaml  fisrt.yaml  marketplace.yaml
Assembly/: HowToRun.txt
BLAS_LAPACK/: compile.txt
BLAS_LAPACK/00_first_example/: a.out  matrix_mult.cpp
Bash/00_general/: 1_for.sh
Bash/100_multitasking/: 1_sleep.sh  2_while.sh  3_sleep.sh  4_sleep.sh
Binary Search Tree/: main  main.cpp
Bo_Qian/: main.cpp
C++/: README.md  read.txt  template
C++/00_general/: pre  pre.cpp
C++/02_leetCode_GfG_Hacker/: main.cpp
C++/03_Meyer/: main.cpp
C++/101_linkedin_advanced_topics_in_cpp/: template  template~
C++/104_l_move_semantics/: help.txt
C++/109_TDD/: help.txt
C++/112_beautiful_C++_STL_Algorithm/: 7_const_iterator  7_const_iterator.cpp  7_iterator  7_iterator.cpp  7_iterator_arithmetic.cpp  7_reverse_iterator.cpp  8_partition.cpp  8_rotate.cpp  8_swap.cpp  accumulate  accumulate.cpp  accumulation  arithmetic  compare  comparing.cpp  copy  copy.cpp  count  count.cpp  fill  fill.cpp  fill.txt  find  find.cpp  for_each  for_each.cpp  for_each.txt  nth  nth_element.cpp  partial_sort.cpp  partition  psort  remove  remove.cpp  replace  replace.cpp  reverse  reverse.cpp  rotate  shuffle  (+7 more)
C++/114_boost/: main.cpp
C++/99_makefile/: #makefile#  makefile
C++/Binary Search Tree/: main.cpp
C++/Class_inheritance/: test.cpp
C++/Class_p93/: main.cpp
C++/Exception/: main.cpp
C++/Exception_Files/: main.cpp
C++/Functor/: help  main.cpp
C++/Heap/: heap.cpp  heap.h  main.cpp
C++/Linear search/: main  main.cpp
C++/Linked List/: main.cpp
C++/Map/: main.cpp
C++/MergeSort/: main.cpp  makefile  mergesort.cppp
C++/Pointer/: main.cpp  makefile
C++/Polymorphism/: Tri_cls.h  main.cpp  polygon_cls.cpp  polygon_cls.h
C++/Polymorphism+Template/: Rec_cls.h  main.cpp  polygon_cls.cpp
C++/PolymorphismII/: Rec_cls.cpp  Rec_cls.h  Tri_cls.h  main.cpp  polygon_cls.cpp  polygon_cls.h
C++/PolymorphismIIb/: Rec_cls.cpp  Rec_cls.h  Tri_cls.cpp  main.cpp  polygon_cls.cpp
C++/Template/: main.cpp
C++/TemplateII/: main.cpp  makefile  makefile_new
C++/TemplateIII/: calc_cls.cpp  calc_cls.h  main  main.cpp  (+1 more)
CMake/01_CMake/01_A_Basic_Starting_Point/: CMakeLists.txt  Help.txt  tutorial.cpp
CMake/01_CMake/05_Adding_system_introspection/: CMakeLists.txt
CMake/01_CMake/05_Adding_system_introspection/MathFunctions/: CMakeLists.txt  mysqrt.cpp
CMake/01_CMake/09_selecting_static_or_shared_libraries/: CMakeLists.txt  License.txt
CMake/01_CMake/09_selecting_static_or_shared_libraries/MathFunctions/: mysqrt.cpp
Class_inheritance/: test.cpp
Class_p93/: main.cpp
Cuda/: add_cuda  add_serial  add_serial2.cpp
Exception/: main.cpp
Exception_Files/: address.txt  main  main.cpp
Fortran/: RandomAccess.f90
Functor/: main  main.cpp
GDB/: gdb_3.html  gdb_w_vscode.txt  help.txt
Git/: .file3.txt.swp  file1.txt  file3.txt  help.txt  testClangWithHook.cpp
Heap/: main  main.cpp
Initialization/: a.out  init.cpp
Linked List/: main  main.cpp
Map/: main  main.cpp
MergeSort/: .nfs00000001836b2a4600001b5b  .nfs00000001836b2a4700001b5c  main  mergesort.cpp
OnPassingVectorsToFunctions/: main  main.cpp
Pointer/: main.cpp
Polymorphism/: Rec_cls.cpp  main  main.cpp  polygon_cls.h
Polymorphism+Template/: Rec2_cls.cpp  Rec2_cls.h  Rec_cls.h  Tri_cls.cpp  Tri_cls.h  main  polygon_cls.h
PolymorphismII/: Rec_cls.h  Tri_cls.cpp  Tri_cls.h  main  main.cpp  polygon_cls.cpp  polygon_cls.h
PolymorphismIIb/: Tri_cls.cpp  Tri_cls.h  polygon_cls.cpp  polygon_cls.h
ProjectManagement/: .~lock.49_Activity-Template_-Project-closeout-report.docx#  14_Activity-Template_-Stakeholder-analysis-and-power-grid.pptx  18_Activity-Template_-RACI-Chart---Phase-2.xlsx  19_Activity-Template_-Project-charter.docx  21_Gantt_chart_template_PgM.xlsx  22_Activity-Template_-WBS-Brainstorm-Diagram.pptx  24_Activity-Exemplar_-Use-a-WBS-to-create-project-tasks-and-milestones---Part-2.xlsx  26_Gantt-chart-exemplar.xlsx  29_Activity-Template_-Project-budget.xlsx  30_Activity-Exemplar_-Project-budget.xlsx  33_Risk-management-plan---Template.docx  34_Activity-Template_-Communication-plan.xlsx  41-Project_Roadmap_Excel_Template.xlsx  43_Activity-Template_-Project-status-report.xlsx  44_Activity-Exemplar_-Status-report.xlsx  47_Activity-Template_-Meeting-agenda.docx  49_Activity-Template_-Project-closeout-report.docx  7_Activity Template_ SMART goals.docx
Queue STL/: main  main.cpp
SQL/: run.txt
Template/: main  main (copy).cppppp  main.cpp
TemplateII/: main.cpp
TemplateIII/: a.out  calc_cls.cpp
Tree Traversal/: main  main.cpp
Variadic template/: main  main.cpp
VariousTypesOfPointer/: main  makefile
cuda/: a.out  main.cpp  main.cu
doxygen/: help.txt
endline/: main
files/: main.cpp  read_from_file.xyz
leetcode_gfg_hackerrank/: main.cpp  myLeetcode_.docx
profiling/: help.txt
test/: test.sln
thisII/: main.sln
valgrind/: help.txt
vector/: main  main.cpp
vector_II/: main.cpp
(+4662 files in other folders)
